@@ -16,7 +16,8 @@ public class SourceEmitter {
         Map<Integer, Integer> lineMapping = new HashMap<>();
 
         ExpressionEmitter exprs = new ExpressionEmitter(w);
-        StatementEmitter stmts = new StatementEmitter(w, exprs);
+        StatementEmitter stmts = new StatementEmitter(w, exprs, unit.types().isEmpty()
+                ? "Unknown" : unit.types().getFirst().simpleName());
 
         // Package
         if (unit.packageName() != null && !unit.packageName().isEmpty()) {
@@ -24,24 +25,47 @@ public class SourceEmitter {
             w.newLine().newLine();
         }
 
+        // Imports
+        if (!unit.imports().isEmpty()) {
+            for (String imp : unit.imports()) {
+                w.token("import").space().write(imp).write(';').newLine();
+            }
+            w.newLine();
+        }
+
         // Type declarations
         for (TypeDeclaration type : unit.types()) {
             emitType(type, w, stmts);
         }
 
-        return new SourceFile(
-                unit.types().isEmpty() ? "Unknown"
-                        : unit.packageName() != null && !unit.packageName().isEmpty()
-                        ? unit.packageName() + "." + unit.types().get(0).simpleName()
-                        : unit.types().get(0).simpleName(),
-                w.toString(), lineMapping
-        );
+        String className = unit.types().isEmpty() ? "Unknown"
+                : unit.packageName() != null && !unit.packageName().isEmpty()
+                ? unit.packageName() + "." + unit.types().getFirst().simpleName()
+                : unit.types().getFirst().simpleName();
+
+        return new SourceFile(className, w.toString(), lineMapping);
     }
 
     private void emitType(TypeDeclaration type, IndentWriter w, StatementEmitter stmts) {
-        w.token("public").space().token(type.kindName()).space().write(type.simpleName());
-        w.space().write('{').newLine();
+        // Access modifiers
+        emitClassModifiers(type.accessFlags(), w);
+
+        w.token(type.kindName()).space().write(type.simpleName());
+
+        // Super class
+        if (type.superName() != null) {
+            w.space().token("extends").space().write(type.superName());
+        }
+
+        // Interfaces
+        if (!type.interfaceNames().isEmpty()) {
+            w.space().token(type.isInterface() ? "extends" : "implements").space();
+            w.write(String.join(", ", type.interfaceNames()));
+        }
+
+        w.space().write("{").newLine();
         w.indent();
+
         for (AstNode member : type.children()) {
             if (member instanceof Statement s) {
                 stmts.emit(s);
@@ -49,7 +73,27 @@ public class SourceEmitter {
                 w.write("// " + member.kind()).newLine();
             }
         }
+
         w.dedent();
-        w.write('}').newLine();
+        w.write("}").newLine();
+    }
+
+    private void emitClassModifiers(int flags, IndentWriter w) {
+        if ((flags & 0x0001) != 0) {
+            w.token("public").space();
+        } else if ((flags & 0x0002) != 0) {
+            w.token("private").space();
+        } else if ((flags & 0x0004) != 0) {
+            w.token("protected").space();
+        }
+        if ((flags & 0x0400) != 0) {
+            w.token("abstract").space();
+        }
+        if ((flags & 0x0010) != 0) {
+            w.token("final").space();
+        }
+        if ((flags & 0x0020) != 0) {
+            w.token("static").space();
+        }
     }
 }
